<resources>
    <string name="app_name">P.online</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="loginrequest">Enter your login</string>
    <string name="passwordrequest">Enter your password</string>
    <string name="loginbutton">Login</string>
    <string name="registerbutton">Register</string>

    <string name="toast">Invalid e-mail or password</string>
    <string name="toast_register">Could not create user</string>
    <string name="backpress">Go back</string>

    <string name="price">Price</string>
    <string name="date">Delivery at:</string>

    <string name="deliverydate">3 hours</string>

    <string name="filetsteak">Filet Steak</string>
    <string name="wingpaddle">Wing Paddle</string>
    <string name="chickenheart">Chicken Heart</string>
    <string name="rib">Rib</string>

    <string name="addproduct">Add product</string>
    <string name="addproduct_name">Product</string>
    <string name="addproduct_description">Description</string>
    <string name="toast_product">Success on register</string>

    <string name="delete">Delete product</string>
    <string name="update">Update info</string>

</resources>
