<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext="com.liuvasconcelos.ponline.LoginActivity">



    <LinearLayout
        android:id="@+id/screen_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/triangulo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_of_the_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/app_name"
            android:textSize="80dp"
            android:textColor="@color/colorAccent"
            android:fontFamily="casual"/>

        <LinearLayout
            android:id="@+id/input_information_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/email"
                android:textColor="@color/gradientColor2"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/login_request_edit_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/loginrequest"
                android:textColor="@color/gradientColor2"
                android:textSize="12dp"
                android:textColorHint="@color/colorAccent" />

            <TextView
                android:id="@+id/password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/password"
                android:textColor="@color/gradientColor2"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/password_request_edit_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/passwordrequest"
                android:textColor="@color/gradientColor2"
                android:textSize="12dp"
                android:textColorHint="@color/colorAccent" />

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/loginbutton"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>