<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:mContext="com.liuvasconcelos.ponline.UpdateItemActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_screen_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:text="@string/backpress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="left"
            android:paddingLeft="30dp"
            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/screen_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/update_item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/update"
            android:textSize="20dp"
            android:textColor="@color/colorAccent"
            android:fontFamily="casual"/>

        <LinearLayout
            android:id="@+id/update_item_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/update_item_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/addproduct_name"
                android:textColor="@color/gradientColor2"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/update_enter_add_item_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/addproduct_name"
                android:textColor="@color/gradientColor2"
                android:textSize="12dp"
                android:textColorHint="@color/gradientColor1"
                />

            <TextView
                android:id="@+id/update_item_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/addproduct_description"
                android:textColor="@color/gradientColor2"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/update_enter_add_item_description"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/addproduct_description"
                android:textColor="@color/gradientColor2"
                android:textColorHint="@color/gradientColor1"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/update_item_price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/price"
                android:textColor="@color/gradientColor2"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/update_enter_add_item_price"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/price"
                android:textColor="@color/gradientColor2"
                android:textColorHint="@color/gradientColor1"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/update_item_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/date"
                android:textColor="@color/gradientColor2"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/update_enter_add_item_time"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:hint="@string/date"
                android:textColor="@color/gradientColor2"
                android:textColorHint="@color/gradientColor1"
                android:textSize="12dp" />

        </LinearLayout>

        <Button
            android:id="@+id/update_item_button_on_register"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/update"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>