<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:mContext="com.liuvasconcelos.ponline.DetailScreenActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_screen_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:text="@string/backpress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="left"
            android:paddingLeft="30dp"
            />
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/detail_item_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_item_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/picanha"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/detail_item_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Picanha"
            android:textColor="@color/wine"
            android:textSize="30dp"/>

        <TextView
            android:id="@+id/detail_item_product_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Lorem ipsum dolor sit amet, convallis donec voluptatem, wisi velit."
            android:maxLines="3"
            android:textColor="@color/gray"
            android:textSize="15dp"
            android:textAlignment="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/detail_item_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/price"
                android:textColor="@color/wine"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/detail_item_product_real_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="R$ 60,00"
                android:textColor="@color/gray"
                android:paddingLeft="10dp"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/detail_item_product_delivery_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/date"
                android:textColor="@color/wine"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/detail_item_product_real_devilery_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/deliverydate"
                android:textColor="@color/gray"
                android:paddingLeft="10dp"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>